--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
   </head>
   <body>
     <div class="container">
+      <div class="HEAD_APP">
       <div class="title_App">
         <h1>Todo-App</h1>
         <img src="img/pencil.png" alt="" />
+      </div>
+      <div class="toggle_switch">
+        <label class ="switch">
+          <input type="checkbox" class="checkbox_ln" />
+          <span class="slider"></span>
+      </div>
       </div>
       <div class="todo_App">
         <div class="todo_input">
