--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
